# Linux-MCP

./: .gitignore  LICENSE  README.md  install.sh  install_global.sh  pyproject.toml  requiraments.txt  run_debug.sh  run_server.sh
docs/: C4-Container.puml  HowItWorks.md  UseCase_EN.gaphor  UseCase_RU.gaphor  desktop.json  window.json
src/: installer.py  main.py
src/modules/: all_mcp_functions.py  init_system.py  misc.py
src/modules/windows_and_desktop/: desktop.py  window.py
src/plugins/X11/: desktop.py  helpers.py  image_capture_tools.py  tools.py  window.py  windows_tools.py
src/plugins/applications/: applications.py  cli.py  tools.py
src/plugins/clipboard/: clipboard.py  tools.py
src/plugins/filesystem/: files.py  filesystem.py  tools.py
src/plugins/hyprland/: hyprland.py  image_capture_tools.py  tools.py  windows_tools.py
src/plugins/input/: cursor.py  keyboard.py  tools.py
src/plugins/sway/: image_capture_tools.py  sway.py  tools.py  windows_tools.py
src/plugins/wayland_input/: cursor.py  keyboard.py  tools.py
