[project]
name = "linux-mcp"
version = "0.1.8"
description = "MCP server to provide lots of tools for LLM and Linux integration."
requires-python = ">=3.10, <3.14"
dependencies = [
    "copykitten>=1.2.2",
    "mcp[cli]>=1.27.0",
    "mss>=10.1.0",
    "pillow>=12.2.0",
    "pyautogui>=0.9.54",
    "pyxdg>=0.28",
    "pydantic>=2.11",
    "python3-xlib>=0.15",
    "wayland-automation>=0.2.7",
]

[tool.ruff]
exclude = [
    "_docs",
    ".venv",
    "venv",
    "temp",
]

line-length = 121

lint.select = ["W", "E", "Q", "COM"]
